boilerplate/tests/snapshots/cli_output__status_show_help.snap
---
source: tests/snapshot/cli_output.rs
expression: status_show_help
---
Show workspace health snapshot

Usage: cargo project status show [OPTIONS]

Options:
  -h, --help  Print help
