boilerplate/tests/snapshots/cli_output__version_normalised.snap
---
source: tests/snapshot/cli_output.rs
expression: version_normalised
---
cargo-project <VERSION>
