boilerplate/tests/snapshots/cli_output__workspace_doctor_help.snap
---
source: tests/snapshot/cli_output.rs
expression: workspace_doctor_help
---
Run workspace-wide diagnostics

Usage: cargo project workspace doctor [OPTIONS]

Options:
  -h, --help  Print help
